# gha-dashboard

./: Cargo.toml  Dockerfile  README.md  instruction.md
.github/workflows/: build-and-push.yml  test.yml
schema/: GetMyWorkflowRunsFixed20RunsPerPage.gql
src/: domain.rs  lib.rs  main.rs
src/application/: use_cases.rs
src/application/use_cases/: stream_github_actions_runs.rs
src/domain/: external_apis.rs  models.rs
src/domain/external_apis/: github.rs
src/domain/models/: run.rs
src/infrastructures/adapters/: secondary.rs
src/infrastructures/adapters/primary/: web.rs
src/infrastructures/adapters/secondary/: external_apis.rs
src/infrastructures/adapters/secondary/external_apis/: github.rs
