[package]
edition = "2024"
name = "gha-dashboard"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = { version = "0.3", features = ["sink"] }
opentelemetry = "0.32.0"
opentelemetry-otlp = { version = "0.32.0", features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.32.0", features = ["rt-tokio", "trace"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.clippy]
allow_attributes = "deny"
dbg_macro = "deny"
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
